--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					<a href="" class="header__link">Отзывы</a>
 					<a href="" class="header__link">Контакты</a>
 				</nav>
-				<a href="tel:8(029)-999-12-13" class="header__phone">8(029)-999-12-13</a>
+				<a href="tel:+375299991213" class="header__phone">8(029)-999-12-13</a>
 			</div>
 			<div class="banner__content">
 				<div class="banner__info">
