--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<title>First Project</title>
 	<!-- Подключаем CSS -->
 	<link rel="stylesheet" href="css/style.css" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Кодировка страницы -->
 	<meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 </head>
@@ -25,7 +26,7 @@
 					<a href="" class="header__link">Отзывы</a>
 					<a href="" class="header__link">Контакты</a>
 				</nav>
-				<a href="tel:8(029)-999-12-13" class="header__phone">8(029)-999-12-13</a>
+				<a href="tel:+375299991213" class="header__phone">8(029)-999-12-13</a>
 			</div>
 			<div class="banner__content">
 				<div class="banner__info">
