--- a/index.html
+++ b/index.html
@@ -55,4 +55,32 @@
 			</div>
 		</div>
 	</div>
+	<div class="stages">
+		<div class="container">
+			<h2 class="stages__title">Как это происходит?</h2>
+			<ul class="stages__items">
+				<li class="stages__item">
+					<div class="stages__number">01</div>
+					<div class="stages__text">Оценка объема предстоящих работ</div>
+					<div class="stages__descr">Стоимость переезда зависит от количества комнат, вещей и мебели. </div>
+				</li>
+				<li class="stages__item">
+					<div class="stages__number">02</div>
+					<div class="stages__text">Упаковка вещей</div>
+					<div class="stages__descr">Упаковываем вещи в коробки, подписываем. Габаритное и деликатное, упаковываем
+						отдельно. </div>
+				</li>
+				<li class="stages__item">
+					<div class="stages__number">03</div>
+					<div class="stages__text">Погрузка и транспортировка вещей</div>
+					<div class="stages__descr">В нашем автопарке имеются машины, подходящие для мебели любых габаритов.</div>
+				</li>
+				<li class="stages__item">
+					<div class="stages__number">04</div>
+					<div class="stages__text">Распаковка и расстановка мебели</div>
+					<div class="stages__descr">Опытные грузчики быстро расставят мебель и уберут мусор от распаковки.</div>
+				</li>
+			</ul>
+		</div>
+	</div>
 </body>
