--- a/index.html
+++ b/index.html
@@ -35,15 +35,21 @@
 					<div class="banner__button">Заказать</div>
 					<div class="banner__bullets">
 						<div class="banner__bullet">
-							<img src="img/first-block/icon/01.svg" alt="icon">
+							<div class="banner__icon">
+								<img src="img/first-block/icon/01.svg" alt="icon">
+							</div>
 							<p>Более 800 переездов</p>
 						</div>
 						<div class="banner__bullet">
-							<img src="img/first-block/icon/02.svg" alt="icon">
+							<div class="banner__icon">
+								<img src="img/first-block/icon/02.svg" alt="icon">
+							</div>
 							<p>Бережная упаковка</p>
 						</div>
 						<div class="banner__bullet">
-							<img src="img/first-block/icon/03.svg" alt="icon">
+							<div class="banner__icon">
+								<img src="img/first-block/icon/03.svg" alt="icon">
+							</div>
 							<p>Фиксированная цена</p>
 						</div>
 					</div>
@@ -51,7 +57,6 @@
 				<div class="banner__image">
 					<img src="img/first-block/courier.png" alt="image">
 				</div>
-
 			</div>
 		</div>
 	</div>
