--- a/index.html
+++ b/index.html
@@ -88,4 +88,42 @@
 			</ul>
 		</div>
 	</div>
+	<div class="prices">
+		<div class="container">
+			<h2 class="prices__title">Цены </h2>
+			<h3 class="prices__subtitle">Фиксированная стоимость на переезд под ключ </h3>
+			<div class="prices__row">
+				<div class="prices__column">
+					<h4>1-комнатная кв-ра</h4>
+					<p>1 фургон</p>
+					<p>2 грузчика</p>
+					<p>Переезд за 4 часа</p>
+					<div class="prices__price">70 руб.</div>
+					<div class="prices__button">
+						<p>Заказать</p>
+					</div>
+				</div>
+				<div class="prices__column">
+					<h4>2-комнатная кв-ра</h4>
+					<p>1 газель - 3 метра</p>
+					<p>2 грузчика</p>
+					<p>Переезд за 4 часа</p>
+					<div class="prices__price">100 руб.</div>
+					<div class="prices__button">
+						<p>Заказать</p>
+					</div>
+				</div>
+				<div class="prices__column">
+					<h4>3-комнатная кв-ра</h4>
+					<p>1 газель - 4 метра</p>
+					<p>2 грузчика</p>
+					<p>Переезд за 6 часов</p>
+					<div class="prices__price"></div>
+					<div class="prices__button">
+						<p>150 руб.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
