--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 					<h1 class="banner__title">Квартирные переезды</h1>
 					<p class="banner__subtitle">По Бресту и области</p>
 					<div class="banner__button">Заказать</div>
+					<div class="banner__button-border"></div>
 					<div class="banner__bullets">
 						<div class="banner__bullet">
 							<div class="banner__icon">
