--- a/index.html
+++ b/index.html
@@ -32,32 +32,30 @@
 				<div class="banner__info">
 					<h1 class="banner__title">Квартирные переезды</h1>
 					<p class="banner__subtitle">По Бресту и области</p>
+					<div class="banner__button">Заказать</div>
+					<div class="banner__bullets">
+						<div class="banner__bullet">
+							<div class="banner__icon">
+								<img src="img/first-block/icon/01.svg" alt="icon">
+							</div>
+							<p>Более 800 переездов</p>
+						</div>
+						<div class="banner__bullet">
+							<div class="banner__icon">
+								<img src="img/first-block/icon/02.svg" alt="icon">
+							</div>
+							<p>Бережная упаковка</p>
+						</div>
+						<div class="banner__bullet">
+							<div class="banner__icon">
+								<img src="img/first-block/icon/03.svg" alt="icon">
+							</div>
+							<p>Фиксированная цена</p>
+						</div>
+					</div>
 				</div>
 				<div class="banner__image">
 					<img src="img/first-block/courier.png" alt="image">
-				</div>
-			</div>
-			<div class="banner__button">
-				<p>Заказать</p>
-			</div>
-			<div class="banner__bullets">
-				<div class="banner__bullet">
-					<div class="banner__icon">
-						<img src="img/first-block/icon/01.svg" alt="icon">
-					</div>
-					<p>Более 800 переездов</p>
-				</div>
-				<div class="banner__bullet">
-					<div class="banner__icon">
-						<img src="img/first-block/icon/02.svg" alt="icon">
-					</div>
-					<p>Бережная упаковка</p>
-				</div>
-				<div class="banner__bullet">
-					<div class="banner__icon">
-						<img src="img/first-block/icon/03.svg" alt="icon">
-					</div>
-					<p>Фиксированная цена</p>
 				</div>
 			</div>
 		</div>
