--- a/index.html
+++ b/index.html
@@ -135,4 +135,38 @@
 			</div>
 		</div>
 	</div>
+	<div class="autopark">
+		<div class="autopark__container">
+			<h2 class="autopark__title">Автопарк</h2>
+			<h3 class="autopark__subtitle">10 видов автомобилей от 800 кг до 10 тонн</h3>
+			<nav class="autopark__row">
+				<div class="autopark__item">
+					<p>Газели</p>
+				</div>
+				<div class="autopark__item">
+					<p>Каблуки</p>
+				</div>
+				<div class="autopark__item">
+					<p>Грузовики</p>
+				</div>
+			</nav>
+			<div class="autopark__content">
+				<div class="autopark__info">
+					<p>Газель 3 метра</p>
+					<ul>
+						<li>Ширина 2 м</li>
+						<li>Высота 2 м</li>
+						<li>Объем 16 м³</li>
+						<li>Грузоподъемность 1,5 т</li>
+					</ul>
+					<div class="autopark__button">
+						<p>Заказать</p>
+					</div>
+				</div>
+				<div class="autopark__image">
+					<img src="img/autopark/car 1.png" alt="car">
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
