--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 				<div class="banner__info">
 					<h1 class="banner__title">Квартирные переезды</h1>
 					<p class="banner__subtitle">По Бресту и области</p>
+					<div class="banner__image-adaptive">
+						<img src="img/first-block/courier-adaptive.png" alt="image">
+					</div>
 					<div class="banner__button">Заказать</div>
 					<div class="banner__bullets">
 						<div class="banner__bullet">
