--- a/index.html
+++ b/index.html
@@ -169,7 +169,19 @@
 				<div class="autopark__image">
 					<img src="img/autopark/car 1.png" alt="car">
 				</div>
+				<div class="autopark__info autopark__info-adaptive">
+					<p>Газель 3 метра / 1,5 тонны</p>
+					<ul>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+					</ul>
+					<div class="autopark__button">
+						<p>Заказать</p>
+					</div>
+				</div>
 			</div>
 		</div>
-	</div>
 </body>
