--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 	<div class="banner">
 		<div class="banner__container">
-			<div class="header">
+			<header class="header">
 				<div class="header__logo">MOVEE</div>
 				<nav class="header__menu">
 					<a href="" class="header__link">Цены</a>
@@ -27,7 +27,7 @@
 					<a href="" class="header__link">Контакты</a>
 				</nav>
 				<a href="tel:+375299991213" class="header__phone">8(029) 999-12-13</a>
-			</div>
+			</header>
 			<div class="banner__content">
 				<div class="banner__info">
 					<h1 class="banner__title">Квартирные переезды</h1>
