--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 			<header class="header">
 				<div class="header__logo">MOVEE</div>
 				<nav class="header__menu">
-					<a href="" class="header__link">Цены</a>
-					<a href="" class="header__link">Автопарк</a>
-					<a href="" class="header__link">Отзывы</a>
-					<a href="" class="header__link">Контакты</a>
+					<li a href="" class="header__link">Цены</li>
+					<li a href="" class="header__link">Автопарк</li>
+					<li a href="" class="header__link">Отзывы</li>
+					<li a href="" class="header__link">Контакты</li>
 				</nav>
 				<a href="tel:+375299991213" class="header__phone">8(029) 999-12-13</a>
 			</header>
