--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 	</div>
 	<div class="stages">
 		<div class="stages__container">
-			<h2 class="stages__title">Как это происходит?</h2>
+			<h2 class="stages__title title">Как это происходит?</h2>
 			<ul class="stages__items">
 				<li class="stages__item">
 					<div class="stages__number">01</div>
@@ -184,4 +184,68 @@
 				</div>
 			</div>
 		</div>
+	</div>
+	<div class="reviews">
+		<div class="reviews__container">
+			<h2 class="reviews__title"></h2>
+			<div class="reviews__row">
+				<div class="reviews__item">
+					<p class="reviews__person">Ирина</p>
+					<div class="reviews__data">
+						<time>24.03.2019</time>
+						<div class="reviews__stars">
+							<div class="reviews__star"><img src="/img/reviews/star.svg" alt=""></div>
+							<div class="reviews__star"><img src="/img/reviews/star.svg" alt=""></div>
+							<div class="reviews__star"><img src="/img/reviews/star.svg" alt=""></div>
+							<div class="reviews__star"><img src="/img/reviews/star.svg" alt=""></div>
+							<div class="reviews__star"><img src="/img/reviews/star.svg" alt=""></div>
+						</div>
+					</div>
+					<p class="reviews__text">Обращение к вам за помощью в переезде оставило только положительные впечатления.
+						Хотелось отметить замечательного водителя газели Алексея. Были трудности с заездом
+						во двор, он проявил себя как компетентный
+						и профессиональный сотрудник, за что ему огромное...</p>
+					<p class="reviews__read-more">Читать полностью</p>
+				</div>
+				<div class="reviews__item">
+					<p class="reviews__person">Светлана Васильевна</p>
+					<div class="reviews__data">
+						<time>13.09.2019</time>
+						<div class="reviews__stars">
+							<div class="reviews__star"><img src="/img/reviews/star.svg" alt=""></div>
+							<div class="reviews__star"><img src="/img/reviews/star.svg" alt=""></div>
+							<div class="reviews__star"><img src="/img/reviews/star.svg" alt=""></div>
+							<div class="reviews__star"><img src="/img/reviews/star.svg" alt=""></div>
+							<div class="reviews__star"><img src="/img/reviews/star.svg" alt=""></div>
+						</div>
+					</div>
+					<p class="reviews__text">Сегодня ( 13.09.2019 ) мы переехали. Остались очень довольны, несмотря на то,
+						что к нам опоздали на 1,5 часа. Морально были к этому готовы ( в прошлый переезд в другой фирме тоже
+						опоздали на час). Водитель заранее позвонил, предупредил, что задерживается.
+						Когда....</p>
+					<p class="reviews__read-more">Читать полностью</p>
+				</div>
+				<div class="reviews__item">
+					<p class="reviews__person">Ольга Петрова</p>
+					<div class="reviews__data">
+						<time>11.11.2019</time>
+						<div class="reviews__stars">
+							<div class="reviews__star"><img src="/img/reviews/star.svg" alt=""></div>
+							<div class="reviews__star"><img src="/img/reviews/star.svg" alt=""></div>
+							<div class="reviews__star"><img src="/img/reviews/star.svg" alt=""></div>
+							<div class="reviews__star"><img src="/img/reviews/star.svg" alt=""></div>
+							<div class="reviews__star"><img src="/img/reviews/star.svg" alt=""></div>
+						</div>
+					</div>
+					<p class="reviews__text">Могу на 100% порекомендовать компанию MOVEE и отметить, что цены фиксированы,
+						что упрощает расчет. Безо всяких заморочек,
+						в отличии от их конкурентов. Упаковали все качественно и быстро. Все вещи приехали в сохранности.
+						Особая благодарность
+						Александру за его...</p>
+					<p class="reviews__read-more">Читать полностью</p>
+				</div>
+			</div>
+			<a href="#" class="reviews__all">Все отзывы</a>
+		</div>
+	</div>
 </body>
