--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 	</div>
 	<div class="prices">
 		<div class="prices__container">
-			<h2 class="prices__title">Цены </h2>
+			<h2 class="prices__title title">Цены </h2>
 			<h3 class="prices__subtitle">Фиксированная стоимость на переезд под ключ </h3>
 			<div class="prices__row">
 				<div class="prices__column">
@@ -140,7 +140,7 @@
 	</div>
 	<div class="autopark">
 		<div class="autopark__container">
-			<h2 class="autopark__title">Автопарк</h2>
+			<h2 class="autopark__title title">Автопарк</h2>
 			<h3 class="autopark__subtitle">10 видов автомобилей от 800 кг до 10 тонн</h3>
 			<nav class="autopark__row">
 				<div class="autopark__item">
@@ -187,7 +187,7 @@
 	</div>
 	<div class="reviews">
 		<div class="reviews__container">
-			<h2 class="reviews__title"></h2>
+			<h2 class="reviews__title title">Отзывы</h2>
 			<div class="reviews__row">
 				<div class="reviews__item">
 					<p class="reviews__person">Ирина</p>
