--- a/index.html
+++ b/index.html
@@ -201,10 +201,10 @@
 							<div class="reviews__star"><img src="/img/reviews/star.svg" alt=""></div>
 						</div>
 					</div>
-					<p class="reviews__text">Обращение к вам за помощью в переезде оставило только положительные впечатления.
-						Хотелось отметить замечательного водителя газели Алексея. Были трудности с заездом
-						во двор, он проявил себя как компетентный
-						и профессиональный сотрудник, за что ему огромное...</p>
+					<p class="reviews__text">Обращение к&nbsp;вам за&nbsp;помощью в&nbsp;переезде оставило только
+						положительные впечатления. Хотелось отметить замечательного водителя газели Алексея. Были трудности
+						с&nbsp;заездом во&nbsp;двор, он&nbsp;проявил себя как компетентный и&nbsp;профессиональный сотрудник,
+						за&nbsp;что ему огромное...</p>
 					<p class="reviews__read-more">Читать полностью</p>
 				</div>
 				<div class="reviews__item">
@@ -219,10 +219,10 @@
 							<div class="reviews__star"><img src="/img/reviews/star.svg" alt=""></div>
 						</div>
 					</div>
-					<p class="reviews__text">Сегодня ( 13.09.2019 ) мы переехали. Остались очень довольны, несмотря на то,
-						что к нам опоздали на 1,5 часа. Морально были к этому готовы ( в прошлый переезд в другой фирме тоже
-						опоздали на час). Водитель заранее позвонил, предупредил, что задерживается.
-						Когда....</p>
+					<p class="reviews__text">Сегодня ( 13.09.2019 ) мы&nbsp;переехали. Остались очень довольны, несмотря
+						на&nbsp;то, что к&nbsp;нам опоздали на&nbsp;1,5&nbsp;часа. Морально были к&nbsp;этому готовы
+						(в&nbsp;прошлый переезд в&nbsp;другой фирме тоже опоздали на&nbsp;час). Водитель заранее позвонил,
+						предупредил, что задерживается. Когда....</p>
 					<p class="reviews__read-more">Читать полностью</p>
 				</div>
 				<div class="reviews__item">
@@ -237,15 +237,17 @@
 							<div class="reviews__star"><img src="/img/reviews/star.svg" alt=""></div>
 						</div>
 					</div>
-					<p class="reviews__text">Могу на 100% порекомендовать компанию MOVEE и отметить, что цены фиксированы,
-						что упрощает расчет. Безо всяких заморочек,
-						в отличии от их конкурентов. Упаковали все качественно и быстро. Все вещи приехали в сохранности.
-						Особая благодарность
-						Александру за его...</p>
+					<p class="reviews__text">Могу на&nbsp;100% порекомендовать компанию MOVEE и&nbsp;отметить, что цены
+						фиксированы, что упрощает расчет. Безо всяких заморочек, в&nbsp;отличии от&nbsp;их&nbsp;конкурентов.
+						Упаковали все качественно и&nbsp;быстро. Все вещи приехали в&nbsp;сохранности. Особая благодарность
+						Александру за&nbsp;его...</p>
 					<p class="reviews__read-more">Читать полностью</p>
 				</div>
 			</div>
-			<a href="#" class="reviews__all">Все отзывы</a>
+			<div class="reviews__all">
+				<a href="#">
+					<p>Все отзывы</p>
+				</a>
+			</div>
 		</div>
-	</div>
 </body>
