--- a/index.html
+++ b/index.html
@@ -250,4 +250,8 @@
 				</a>
 			</div>
 		</div>
+	</div>
+	<div class="zdarova">
+		<p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты.</p>
+	</div>
 </body>
