--- a/index.html
+++ b/index.html
@@ -245,13 +245,8 @@
 				</div>
 			</div>
 			<div class="reviews__all">
-				<a href="#">
-					<p>Все отзывы</p>
-				</a>
+					<p a href="#">Все отзывы</p>
 			</div>
 		</div>
-	</div>
-	<div class="zdarova">
-		<p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты.</p>
 	</div>
 </body>
