--- a/index.html
+++ b/index.html
@@ -244,6 +244,15 @@
 					<p class="reviews__read-more">Читать полностью</p>
 				</div>
 			</div>
+			<div class="reviews__points">
+				<ul>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+				</ul>
+			</div>
 			<div class="reviews__all">
 					<p a href="#">Все отзывы</p>
 			</div>
