--- a/index.html
+++ b/index.html
@@ -154,6 +154,9 @@
 				</div>
 			</nav>
 			<div class="autopark__content">
+				<div class="autopark__slider-left">
+					<img src="/img/autopark/arrow-left.svg" alt="arrow-left">
+				</div>
 				<div class="autopark__info">
 					<p>Газель 3 метра</p>
 					<ul>
@@ -169,6 +172,9 @@
 				<div class="autopark__image">
 					<img src="img/autopark/car 1.png" alt="car">
 				</div>
+				<div class="autopark__slider-right">
+					<img src="/img/autopark/arrow-right.svg" alt="arrow-right">
+				</div>
 				<div class="autopark__info autopark__info-adaptive">
 					<p>Газель 3 метра / 1,5 тонны</p>
 					<ul>
@@ -178,7 +184,7 @@
 						<li></li>
 						<li></li>
 					</ul>
-					<div class="autopark__button">
+					<div class="autopark__button autopark__button-adaptive">
 						<p>Заказать</p>
 					</div>
 				</div>
