--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 				<div class="autopark__slider-right">
 					<img src="/img/autopark/arrow-right.svg" alt="arrow-right">
 				</div>
-				<div class="autopark__info autopark__info-adaptive">
+				<div class="autopark__info-adaptive">
 					<p>Газель 3 метра / 1,5 тонны</p>
 					<ul>
 						<li></li>
@@ -184,7 +184,7 @@
 						<li></li>
 						<li></li>
 					</ul>
-					<div class="autopark__button autopark__button-adaptive">
+					<div class="autopark__button-adaptive">
 						<p>Заказать</p>
 					</div>
 				</div>
@@ -260,7 +260,7 @@
 				</ul>
 			</div>
 			<div class="reviews__all">
-					<p a href="#">Все отзывы</p>
+				<p a href="#">Все отзывы</p>
 			</div>
 		</div>
 	</div>
