--- a/index.html
+++ b/index.html
@@ -264,4 +264,42 @@
 			</div>
 		</div>
 	</div>
+	<div class="forms">
+		<div class="forms__container stages__container">
+			<div class="forms__title title">Закажи переезд прямо сейчас со скидкой %</div>
+			<p class="forms__note">Мы перезвоним в течении 10 секунд</p>
+			<form action="/">
+				<div class="forms__name-and-tel">
+					<input type="text" placeholder="Ваше имя">
+					<input type="tel" placeholder="Телефон">
+				</div>
+				<div class="forms__location">
+					<p>Укажите область</p>
+					<select name="region">
+						<option value="Minskaya">Минская</option>
+						<option value="Brestskaya">Брестская</option>
+					</select>
+					<select name="city">
+						<option value="Mozyr">Мозырь</option>
+						<option value="Minsk">Минск</option>
+						<option value="Brest">Брест</option>
+					</select>
+				</div>
+				<div class="forms__payment">
+					<p>Способ оплаты</p>
+					<p><input type="radio" name="payment-method" value="cash">Наличными курьеру</p>
+					<p><input type="radio" name="payment-method" value="card" checked>Картой курьеру</p>
+					<p><input type="radio" name="payment-method" value="bank">Банковский перевод</p>
+				</div>
+				<div class="forms__services">
+					<p>Дополнительные услуги</p>
+					<p><input type="checkbox" name="service1" value="yes">Вызов замерщика</p>
+					<p><input type="checkbox" name="service2" value="yes">Упаковка для хрупких предметов</p>
+					<p><input type="checkbox" name="service3" value="yes">Кран</p>
+					<p><input type="checkbox" name="service4" value="yes">Сборка мебели</p>
+					<p><input type="checkbox" name="service5" value="yes">Крупногабаритные предметы</p>
+				</div>
+			</form>
+		</div>
+	</div>
 </body>
