--- a/index.html
+++ b/index.html
@@ -295,11 +295,13 @@
 					</div>
 					<div class="forms__services">
 						<p class="forms__services-name forms__section-name">Дополнительные услуги</p>
-						<p><input type="checkbox" name="service1" value="yes">Вызов замерщика</p>
-						<p><input type="checkbox" name="service2" value="yes">Упаковка для хрупких предметов</p>
-						<p><input type="checkbox" name="service3" value="yes">Кран</p>
-						<p><input type="checkbox" name="service4" value="yes">Сборка мебели</p>
-						<p><input type="checkbox" name="service5" value="yes">Крупногабаритные предметы</p>
+						<div class="forms__services-check">
+							<p><input type="checkbox" name="service1" value="yes">Вызов замерщика</p>
+							<p><input type="checkbox" name="service2" value="yes">Упаковка для хрупких предметов</p>
+							<p><input type="checkbox" name="service3" value="yes">Кран</p>
+							<p><input type="checkbox" name="service4" value="yes">Сборка мебели</p>
+							<p><input type="checkbox" name="service5" value="yes">Крупногабаритные предметы</p>
+						</div>
 					</div>
 					<div class="forms__timer">
 						<p>05:37:25</p>
