--- a/index.html
+++ b/index.html
@@ -303,15 +303,19 @@
 							<p><input type="checkbox" name="service5" value="yes">Крупногабаритные предметы</p>
 						</div>
 					</div>
-					<div class="forms__timer">
-						<p>05:37:25</p>
-					</div>
-					<div class="forms__button-send">
-						<div class="forms__button button">
-							<p>Заказать со скидкой</p>
+					<div class="forms__timer-and-button-send">
+						<div class="forms__timer">
+							<p>05:37:25</p>
 						</div>
-						<p class="forms__note-buttons"><input type="checkbox" name="button-send" value="yes">Даю согласие на
-							обработку данных</p>
+						<div class="forms__button-send">
+							<div class="forms__button button">
+								<p>Заказать со скидкой</p>
+							</div>
+							<div class="forms__note-buttons">
+								<p><input type="checkbox" name="button-send" value="yes">Даю согласие
+									на&nbsp;обработку данных</p>
+							</div>
+						</div>
 					</div>
 				</form>
 			</div>
