--- a/index.html
+++ b/index.html
@@ -312,8 +312,8 @@
 								<p>Заказать со скидкой</p>
 							</div>
 							<div class="forms__note-buttons">
-								<p><input type="checkbox" name="button-send" value="yes">Даю согласие
-									на&nbsp;обработку данных</p>
+								<input type="checkbox" name="button-send" value="yes">
+								<p>Даю согласие на&nbsp;обработку данных</p>
 							</div>
 						</div>
 					</div>
