--- a/index.html
+++ b/index.html
@@ -270,8 +270,10 @@
 			<div class="forms__wrapper">
 				<p class="forms__note">Мы перезвоним в течении 10 секунд</p>
 				<form action="/">
-					<input class="forms__name" type="text" placeholder="Ваше имя">
-					<input class="forms__tel" type="tel" placeholder="Телефон">
+					<div class="forms__name-and-tel">
+						<input class="forms__name" type="text" placeholder="Ваше имя">
+						<input class="forms__tel" type="tel" placeholder="Телефон">
+					</div>
 					<div class="forms__location">
 						<p class="forms__region-name forms__section-name">Укажите область</p>
 						<select class="forms__region" name="region">
