--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!-- Отображаемое тело страницы -->
 
 <body>
-	<div class="banner">
+	<section class="banner">
 		<div class="banner__container container">
 			<header class="header">
 				<div class="header__logo">MOVEE</div>
@@ -62,8 +62,8 @@
 				</div>
 			</div>
 		</div>
-	</div>
-	<div class="stages">
+	</section>
+	<section class="stages">
 		<div class="stages__container container">
 			<h2 class="stages__title title">Как это происходит?</h2>
 			<ul class="stages__items">
@@ -93,8 +93,8 @@
 				</li>
 			</ul>
 		</div>
-	</div>
-	<div class="prices">
+	</section>
+	<section class="prices">
 		<div class="prices__container container">
 			<h2 class="prices__title title">Цены </h2>
 			<h3 class="prices__subtitle subtitle">Фиксированная стоимость на переезд под ключ </h3>
@@ -137,8 +137,8 @@
 				</div>
 			</div>
 		</div>
-	</div>
-	<div class="autopark">
+	</section>
+	<section class="autopark">
 		<div class="autopark__container container">
 			<h2 class="autopark__title title">Автопарк</h2>
 			<h3 class="autopark__subtitle subtitle">10 видов автомобилей от 800 кг до 10 тонн</h3>
@@ -190,8 +190,8 @@
 				</div>
 			</div>
 		</div>
-	</div>
-	<div class="reviews">
+	</section>
+	<section class="reviews">
 		<div class="reviews__container container">
 			<h2 class="reviews__title title">Отзывы</h2>
 			<div class="reviews__row">
@@ -263,8 +263,8 @@
 				<p a href="#">Все отзывы</p>
 			</div>
 		</div>
-	</div>
-	<div class="forms">
+	</section>
+	<section class="forms">
 		<div class="forms__container container">
 			<div class="forms__title title">Закажи переезд прямо сейчас со скидкой %</div>
 			<div class="forms__wrapper">
@@ -322,5 +322,5 @@
 				</form>
 			</div>
 		</div>
-	</div>
+	</section>
 </body>
